# monobank_example

./: .gitignore  invoice.py  main.py  pyproject.toml
